--- a/interpolation.ipynb
+++ b/interpolation.ipynb
@@ -2,35 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ptpl import PyTorchPipeline\n",
-    "from dataset import get_loaders, ds\n",
+    "import os\n",
+    "\n",
+    "from dataset.dataset import *\n",
+    "from pytorch_pipeline.ptpl import PyTorchPipeline\n",
+    "from model.model import *\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
     "\n",
     "import random\n",
-    "random.seed(43)\n",
-    "from model import Encoder, Decoder"
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hidden_dim = 64\n",
+    "emb_dim = 32\n",
+    "\n",
+    "hparams = {\n",
+    "    'hidden_dim': hidden_dim,\n",
+    "    'emb_dim': emb_dim,\n",
+    "    'num_batches' : 32,\n",
+    "    'path2load': \"./weights/hidden_size_\" + str(hidden_dim) + \"_emb_dim_\" + str(emb_dim) + \".pt\",\n",
+    "}\n",
+    "\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 37%|███▋      | 49884/135842 [00:00<00:00, 498771.50it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -43,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 135842/135842 [00:00<00:00, 255605.77it/s]\n"
+      "100%|██████████| 135842/135842 [00:00<00:00, 580348.20it/s]\n"
      ]
     },
     {
@@ -52,59 +64,97 @@
      "text": [
       "The vocabulary size if 5384 \n",
       "\n",
-      "The size of the newly created text data is 122885, 90% of the original text\n"
+      "The size of the newly created text data is 122885, 90% of the original text\n",
+      "Size of the training data:  98310\n",
+      "Size of the validation data:  24575\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "perSentence, vocab = get_loaders()\n",
+    "# prepare data\n",
+    "\n",
+    "path = os.path.join(\"./data\", \"eng-fra.txt\")\n",
+    "perSentence, vocab = load_data(path)\n",
     "vocab_size = len(vocab)\n",
     "\n",
-    "hidden_dim = 32\n",
-    "emb_dim = 32\n",
-    "nfe = 50\n",
+    "train_data = {}\n",
+    "val_data = {}\n",
     "\n",
-    "hparams = {\n",
-    "    'wb' : False,\n",
-    "    'span_size': 30,\n",
-    "    'hidden_dim': hidden_dim,\n",
-    "    'emb_dim': emb_dim,\n",
-    "    'nfe': nfe,\n",
-    "    'gpu_num': 0,\n",
-    "    'num_epochs': 100,\n",
-    "    'num_batches' : 256,\n",
-    "    'path2load': \"./weights/hidden_size_\" + str(hidden_dim) + \"_emb_dim_\" + str(emb_dim) + \"_nfe_\" + str(nfe) + \".pt\",\n",
-    "    'learning_rate': 1e-3,\n",
-    "}"
+    "for key, values in perSentence.items():\n",
+    "    arr = values[:]\n",
+    "    random.shuffle(arr)\n",
+    "\n",
+    "    val_size = int(0.2 * len(arr))\n",
+    "\n",
+    "    val_arr = arr[:val_size]\n",
+    "    train_arr = arr[val_size:]\n",
+    "\n",
+    "    train_data[key] = train_arr[:]\n",
+    "    val_data[key] = val_arr[:]\n",
+    "\n",
+    "train_size = sum([len(value) for value in train_data.values() ])\n",
+    "val_size = sum([len(value) for value in val_data.values() ])\n",
+    "\n",
+    "\n",
+    "print(\"Size of the training data: \", train_size)\n",
+    "print(\"Size of the validation data: \", val_size)\n",
+    "print()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your vector field callable (nn.Module) should have both time `t` and state `x` as arguments, we've wrapped it for you.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Seq2Seq(\n",
+       "  (embedding): Embedding(5384, 32)\n",
+       "  (encoder): Encoder(\n",
+       "    (rnn): GRU(32, 64)\n",
+       "    (dropout): Dropout(p=0.3, inplace=False)\n",
+       "  )\n",
+       "  (decoder): Decoder(\n",
+       "    (ode_solve): Neural ODE:\n",
+       "    \t- order: 1        \n",
+       "    \t- solver: RungeKutta4()\n",
+       "    \t- adjoint solver: RungeKutta4()        \n",
+       "    \t- tolerances: relative 0.001 absolute 0.001        \n",
+       "    \t- adjoint tolerances: relative 0.0001 absolute 0.0001        \n",
+       "    \t- num_parameters: 8320        \n",
+       "    \t- NFE: 0.0\n",
+       "    (fc): Linear(in_features=64, out_features=5384, bias=True)\n",
+       "    (dropout): Dropout(p=0.3, inplace=False)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "device = torch.device(\"cuda:\" + str(hparams['gpu_num']))"
+    "# define a model\n",
+    "embedding = nn.Embedding(vocab_size, emb_dim)\n",
+    "encoder = Encoder(emb_dim, hidden_dim)\n",
+    "decoder = Decoder(hidden_dim, vocab_size)\n",
+    "model = Seq2Seq(embedding, encoder, decoder)\n",
+    "model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = nn.Sequential(\n",
-    "    nn.Embedding(vocab_size, hparams['emb_dim']),\n",
-    "    Encoder(hparams['emb_dim'], hparams['hidden_dim']),\n",
-    "    Decoder(hparams['hidden_dim'], vocab_size, hparams['span_size'], device, hparams['nfe']),\n",
-    ")\n",
-    "model.to(device)\n",
-    "pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -116,21 +166,16 @@
     }
    ],
    "source": [
-    "\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr = hparams['learning_rate'])\n",
-    "\n",
-    "\n",
-    "# define PyTorch pipeline\n",
     "ptpl = PyTorchPipeline(\n",
     "    project_name = \"gru_node\",\n",
     "    configs = {\n",
     "        'device': device,\n",
-    "        'criterion': criterion,\n",
-    "        'optimizer': optimizer,\n",
-    "        'train_dataloader': perSentence,\n",
+    "        'criterion': None,\n",
+    "        'optimizer': None,\n",
+    "        'train_dataloader': train_data,\n",
+    "        'val_dataloader': val_data,\n",
     "        'print_logs': True,\n",
-    "        'wb': hparams['wb'],\n",
+    "        'wb': False,\n",
     "    },\n",
     "    hparams = hparams,\n",
     "    model = model,\n",
@@ -139,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,23 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "you re the oldest . <EOS>\n",
-      "i love this store . <EOS>\n",
-      "whose clock is it ? <EOS>\n",
-      "i don t belong . <EOS>\n",
-      "i m from brazil . <EOS>\n",
-      "i was busy cooking . <EOS>\n",
-      "that s not interesting . <EOS>\n",
-      "it was no accident . <EOS>\n",
-      "go grab a drink . <EOS>\n",
-      "they looked very happy . <EOS>\n"
+      "i don t date . <EOS>\n",
+      "who s in control ? <EOS>\n",
+      "your cough worries me . <EOS>\n",
+      "the pain was unbearable . <EOS>\n",
+      "i like your style . <EOS>\n",
+      "he s a <UNK> . <EOS>\n",
+      "anyone can do it . <EOS>\n",
+      "you ve been infected . <EOS>\n",
+      "i love traveling alone . <EOS>\n",
+      "what station is it ? <EOS>\n"
      ]
     }
    ],
@@ -176,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,81 +257,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss, selected_output_data = ptpl.compute_loss(batch, output_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.0588, device='cuda:0', grad_fn=<NllLossBackward>)\n"
+      "torch.Size([6, 10, 5384])\n"
      ]
     }
    ],
    "source": [
-    "print(loss)"
+    "print(output_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "you you just just just re re re re re re re re re teased spoiling spoiling the the the the the the the the oldest oldest oldest oldest oldest oldest oldest oldest oldest contract contract contract . . . . . . . . . <EOS> <EOS> <EOS> <EOS>\n",
-      "you re the oldest . <EOS>\n",
-      " \n",
-      "i i i i i love love love love love love love love love on on this this this this this this this this store store store store store store store store store drawer shelf . . . . . . . . . <EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
-      "i love this store . <EOS>\n",
-      " \n",
-      "whose whose whose whose whose whose bicycle clock clock clock clock clock clock clock umbrella is is is is is is is up s it it it it it it it it it it it it it ? ? ? ? ? ? ? ? ? <EOS> <EOS> <EOS> <EOS>\n",
-      "whose clock is it ? <EOS>\n",
-      " \n",
-      "i i i just just don don don don don don don don don t t t t t t t t t speak belong belong belong belong belong belong belong belong belong jump spaghetti spaghetti spaghetti . . . . . . . . <EOS> <EOS> <EOS> <EOS> <EOS>\n",
-      "i don t belong . <EOS>\n",
-      " \n",
-      "i i i have m m m m m m m m like loved loved loved from from from from from from from from from from brazil brazil brazil brazil brazil brazil brazil brazil brazil brazil folded . . . . . . . . . <EOS> <EOS> <EOS> <EOS>\n",
-      "i m from brazil . <EOS>\n",
-      " \n",
-      "i i the <UNK> was was was was was was was was was was was busy busy busy busy busy busy busy busy busy working working cooking cooking cooking cooking cooking cooking cooking knives tonight . . . . . . . . . . <EOS> <EOS> <EOS> <EOS> <EOS>\n",
-      "i was busy cooking . <EOS>\n",
-      " \n",
-      "that that that that that that that s s s s s s did did could not not not not not not not so very very very interesting interesting interesting interesting interesting interesting interesting confident discovery . . . . . . . . . <EOS> <EOS> <EOS> <EOS> <EOS>\n",
-      "that s not interesting . <EOS>\n",
-      " \n",
-      "it that his mother mother was was was was was was was was no no no no no no no no no no only bright bright bright years years accident accident accident accident accident accident ago ago . . . . . . . . . <EOS> <EOS> <EOS> <EOS>\n",
-      "it was no accident . <EOS>\n",
-      " \n",
-      "go go let let put put grab grab grab grab grab grab grab travel a a a a a a a a a a drink drink drink drink drink drink drink towel towel breakdown . . . . . . . . . . . <EOS> <EOS> <EOS> <EOS> <EOS>\n",
-      "go grab a drink . <EOS>\n",
-      " \n",
-      "they they just looked looked looked looked looked looked looked looked looked looked looked looked looked looked very very very very very very very very happy happy happy happy happy happy happy ending . . . . . . . . <EOS> <EOS> <EOS> <EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
-      "they looked very happy . <EOS>\n",
-      " \n"
+      "torch.Size([10, 6])\n",
+      "i don t date . <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "who s in control ? <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "your cough worries me . <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "the pain was unbearable . <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "i like your style . <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "he s a <UNK> . <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "anyone can do it . <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "you ve been infected . <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "i love traveling alone . <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n",
+      "what station is it ? <EOS>\n",
+      "<EOS> <EOS> <EOS> <EOS> <EOS> <EOS>\n"
      ]
     }
    ],
    "source": [
     "temp = output_data.transpose(1, 0).argmax(2)\n",
+    "print(temp.shape)\n",
+    "\n",
     "for i in range(10):\n",
-    "    sampleSentence = \" \".join([vocab.itos[w] for w in sampleSentences[i]])\n",
+    "    ground_truth_sentence = \" \".join([vocab.itos[w] for w in sampleSentences[i]])\n",
     "    torch_sentence = temp[i].cpu()\n",
-    "    torch_sentence = \" \".join([vocab.itos[torch_sentence[i].item()] for i in range(torch_sentence.shape[0])])\n",
-    "    print(torch_sentence)\n",
-    "    print(sampleSentence)\n",
-    "    print(\" \")"
+    "    sentence = \" \".join([vocab.itos[w.item()] for w in torch_sentence])\n",
+    "    print(sentence)\n",
+    "#     print(torch_sentence)\n",
+    "#     print(\" \")"
    ]
   },
   {
@@ -320,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
